toy/parser_edited.js
ToyParser = (function(){
	/*
	 * Generated by PEG.js 0.7.0.
	 *
	 * http://pegjs.majda.cz/
	 */
	
	function quote(s) {
		/*
		 * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
		 * string literal except for the closing quote character, backslash,
		 * carriage return, line separator, paragraph separator, and line feed.
		 * Any character may appear in the form of an escape sequence.
		 *
		 * For portability, we also escape escape all control and non-ASCII
		 * characters. Note that "\0" and "\v" escape sequences are not used
		 * because JSHint does not like the first and IE the second.
		 */
		 return '"' + s
			.replace(/\\/g, '\\\\')  // backslash
			.replace(/"/g, '\\"')    // closing quote character
			.replace(/\x08/g, '\\b') // backspace
			.replace(/\t/g, '\\t')   // horizontal tab
			.replace(/\n/g, '\\n')   // line feed
			.replace(/\f/g, '\\f')   // form feed
			.replace(/\r/g, '\\r')   // carriage return
			.replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
			+ '"';
	}
	
	var result = {
		/*
		 * Parses the input with a generated parser. If the parsing is successfull,
		 * returns a value explicitly or implicitly specified by the grammar from
		 * which the parser was generated (see |PEG.buildParser|). If the parsing is
		 * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
		 */
		parse: function(input, startRule) {
			var parseFunctions = {
				"start": parse_start,
				"statements": parse_statements,
				"statement": parse_statement,
				"part_statement": parse_part_statement,
				"statement_block": parse_statement_block,
				"expression": parse_expression,
				"ternary": parse_ternary,
				"operation": parse_operation,
				"primary": parse_primary,
				"argument_list": parse_argument_list,
				"comma_expression": parse_comma_expression,
				"function": parse_function,
				"ws": parse_ws,
				"ews": parse_ews,
				"identifier": parse_identifier,
				"valid_first": parse_valid_first,
				"valid_rest": parse_valid_rest,
				"number_frac": parse_number_frac,
				"number": parse_number,
				"special": parse_special,
				"true": parse_true,
				"false": parse_false,
				"null": parse_null,
				"EOS": parse_EOS,
				"EOF": parse_EOF,
				"empty_lines": parse_empty_lines,
				"operators": parse_operators,
				"unary_operators": parse_unary_operators,
				"line_comment": parse_line_comment,
				"multiline_comment": parse_multiline_comment,
				"old_ternary": parse_old_ternary,
				"logical_or": parse_logical_or,
				"logical_and": parse_logical_and,
				"equality": parse_equality,
				"comparison": parse_comparison,
				"additive": parse_additive,
				"multiplicative": parse_multiplicative,
				"not": parse_not,
				"logical_or_ops": parse_logical_or_ops,
				"logical_and_ops": parse_logical_and_ops,
				"bitwise_or_ops": parse_bitwise_or_ops,
				"bitwise_xor_ops": parse_bitwise_xor_ops,
				"bitwise_and_ops": parse_bitwise_and_ops,
				"equality_ops": parse_equality_ops,
				"comparison_ops": parse_comparison_ops,
				"shift_ops": parse_shift_ops,
				"additive_ops": parse_additive_ops,
				"multiplicative_ops": parse_multiplicative_ops,
				"not_ops": parse_not_ops,
				"isa_ops": parse_isa_ops,
				"negation_ops": parse_negation_ops,
				"inc_dec_ops": parse_inc_dec_ops
			};
			
			if (startRule !== undefined) {
				if (parseFunctions[startRule] === undefined) {
					throw new Error("Invalid rule name: " + quote(startRule) + ".");
				}
			} else {
				startRule = "start";
			}
			
			var pos = 0;
			var reportFailures = 0;
			var rightmostFailuresPos = 0;
			var rightmostFailuresExpected = [];
			
			function padLeft(input, padding, length) {
				var result = input;
				
				var padLength = length - input.length;
				for (var i = 0; i < padLength; i++) {
					result = padding + result;
				}
				
				return result;
			}
			
			function escape(ch) {
				var charCode = ch.charCodeAt(0);
				var escapeChar;
				var length;
				
				if (charCode <= 0xFF) {
					escapeChar = 'x';
					length = 2;
				} else {
					escapeChar = 'u';
					length = 4;
				}
				
				return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
			}
			
			function matchFailed(failure) {
				if (pos < rightmostFailuresPos) {
					return;
				}
				
				if (pos > rightmostFailuresPos) {
					rightmostFailuresPos = pos;
					rightmostFailuresExpected = [];
				}
				
				rightmostFailuresExpected.push(failure);
			}
			
			function parse_start()
			{
				var s;

				parse_ews();
				s = pos < input.length ? parse_statements() : [];
				parse_ews();
				parse_line_comment();

				return s === null ? "[]" : s;
			}
			
			function parse_statements()
			{
				var result, statement;
				
				result = [];
				statement = parse_statement();
				while( statement !== null )
				{
					result.push( statement );
					statement = parse_statement();
				}
				return result;
			}
			
			function parse_statement()
			{
				var result0, result1, result2, result3;
				var pos0, pos1;
				
				pos0 = pos;
				pos1 = pos;
				result0 = parse_part_statement();
				if (result0 !== null) {
					result1 = parse_ws();
					if (result1 !== null) {
						result2 = parse_line_comment();
						result2 = result2 !== null ? result2 : "";
						if (result2 !== null) {
							result3 = parse_EOS();
							if (result3 !== null) {
								result0 = [result0];
							} else {
								result0 = null;
								pos = pos1;
							}
						} else {
							result0 = null;
							pos = pos1;
						}
					} else {
						result0 = null;
						pos = pos1;
					}
				} else {
					result0 = null;
					pos = pos1;
				}

				if (result0 !== null)
				{
					result0 = result0[ 0 ];
				}

				if (result0 === null)
				{
					pos = pos0;
				}
				return result0;
			}
			
			function parse_part_statement() {
				var result0, result1, result2, result3, result4, result5, result6, result7;
				var pos0, pos1;
				
				pos0 = pos;
				pos1 = pos;
				result0 = parse_ws();
				if (result0 !== null) {
					result1 = parse_identifier();
					if (result1 !== null) {
						result2 = parse_ws();
						if (result2 !== null) {
							if (input.charCodeAt(pos) === 61) {
								result3 = "=";
								pos++;
							} else {
								result3 = null;
								if (reportFailures === 0) {
									matchFailed("\"=\"");
								}
							}
							if (result3 !== null) {
								result4 = parse_ws();
								if (result4 !== null) {
									result5 = parse_expression();
									if (result5 !== null) {
										result0 = [result0, result1, result2, result3, result4, result5];
									} else {
										result0 = null;
										pos = pos1;
									}
								} else {
									result0 = null;
									pos = pos1;
								}
							} else {
								result0 = null;
								pos = pos1;
							}
						} else {
							result0 = null;
							pos = pos1;
						}
					} else {
						result0 = null;
						pos = pos1;
					}
				} else {
					result0 = null;
					pos = pos1;
				}
				if (result0 !== null) {
					result0 = (function(offset, i, e) { return { tag: "=", left: i, right: e }; })(pos0, result0[1], result0[5]);
				}
				if (result0 === null) {
					pos = pos0;
				}
				if (result0 === null) {
					pos0 = pos;
					pos1 = pos;
					result0 = parse_ws();
					if (result0 !== null) {
						if (input.substr(pos, 6) === "return") {
							result1 = "return";
							pos += 6;
						} else {
							result1 = null;
							if (reportFailures === 0) {
								matchFailed("\"return\"");
							}
						}
						if (result1 !== null) {
							result2 = parse_ws();
							if (result2 !== null) {
								result3 = parse_expression();
								if (result3 !== null) {
									result0 = [result0, result1, result2, result3];
								} else {
									result0 = null;
									pos = pos1;
								}
							} else {
								result0 = null;
								pos = pos1;
							}
						} else {
							result0 = null;
							pos = pos1;
						}
					} else {
						result0 = null;
						pos = pos1;
					}
					if (result0 !== null) {
						result0 = (function(offset, e) { return { tag: "return", expression: e }; })(pos0, result0[3]);
					}
					if (result0 === null) {
						pos = pos0;
					}
					if (result0 === null) {
						pos0 = pos;
						pos1 = pos;
						result0 = parse_ws();
						if (result0 !== null) {
							if (input.substr(pos, 6) === "module") {
								result1 = "module";
								pos += 6;
							} else {
								result1 = null;
								if (reportFailures === 0) {
									matchFailed("\"module\"");
								}
							}
							if (result1 !== null) {
								result2 = parse_ws();
								if (result2 !== null) {
									result3 = parse_identifier();
									if (result3 !== null) {
										result0 = [result0, result1, result2, result3];
									} else {
										result0 = null;
										pos = pos1;
									}
								} else {
									result0 = null;
									pos = pos1;
								}
							} else {
								result0 = null;
								pos = pos1;
							}
						} else {
							result0 = null;
							pos = pos1;
						}
						if (result0 !== null) {
							result0 = (function(offset, i) { return { tag: "module", name: i }; })(pos0, result0[3]);
						}
						if (result0 === null) {
							pos = pos0;
						}
						if (result0 === null) {
							pos0 = pos;
							pos1 = pos;
							result0 = parse_ws();
							if (result0 !== null) {
								if (input.substr(pos, 6) === "import") {
									result1 = "import";
									pos += 6;
								} else {
									result1 = null;
									if (reportFailures === 0) {
										matchFailed("\"import\"");
									}
								}
								if (result1 !== null) {
									result2 = parse_ws();
									if (result2 !== null) {
										result3 = parse_identifier();
										if (result3 !== null) {
											result4 = parse_ws();
											if (result4 !== null) {
												if (input.substr(pos, 2) === "as") {
													result5 = "as";
													pos += 2;
												} else {
													result5 = null;
													if (reportFailures === 0) {
														matchFailed("\"as\"");
													}
												}
												if (result5 !== null) {
													result6 = parse_ws();
													if (result6 !== null) {
														result7 = parse_identifier();
														if (result7 !== null) {
															result0 = [result0, result1, result2, result3, result4, result5, result6, result7];
														} else {
															result0 = null;
															pos = pos1;
														}
													} else {
														result0 = null;
														pos = pos1;
													}
												} else {
													result0 = null;
													pos = pos1;
												}
											} else {
												result0 = null;
												pos = pos1;
											}
										} else {
											result0 = null;
											pos = pos1;
										}
									} else {
										result0 = null;
										pos = pos1;
									}
								} else {
									result0 = null;
									pos = pos1;
								}
							} else {
								result0 = null;
								pos = pos1;
							}
							if (result0 !== null) {
								result0 = (function(offset, i, j) { return { tag: "import", name: i, alias: j }; })(pos0, result0[3], result0[7]);
							}
							if (result0 === null) {
								pos = pos0;
							}
							if (result0 === null) {
								pos0 = pos;
								pos1 = pos;
								result0 = parse_ws();
								if (result0 !== null) {
									if (input.substr(pos, 6) === "import") {
										result1 = "import";
										pos += 6;
									} else {
										result1 = null;
										if (reportFailures === 0) {
											matchFailed("\"import\"");
										}
									}
									if (result1 !== null) {
										result2 = parse_ws();
										if (result2 !== null) {
											result3 = parse_identifier();
											if (result3 !== null) {
												result0 = [result0, result1, result2, result3];
											} else {
												result0 = null;
												pos = pos1;
											}
										} else {
											result0 = null;
											pos = pos1;
										}
									} else {
										result0 = null;
										pos = pos1;
									}
								} else {
									result0 = null;
									pos = pos1;
								}
								if (result0 !== null) {
									result0 = (function(offset, i) { return { tag: "import", name: i }; })(pos0, result0[3]);
								}
								if (result0 === null) {
									pos = pos0;
								}
								if (result0 === null) {
									pos0 = pos;
									pos1 = pos;
									result0 = parse_ws();
									if (result0 !== null) {
										result1 = parse_expression();
										if (result1 !== null) {
											result0 = [result0, result1];
										} else {
											result0 = null;
											pos = pos1;
										}
									} else {
										result0 = null;
										pos = pos1;
									}
									if (result0 !== null) {
										result0 = (function(offset, e) { return { tag: "ignore", body: e }; })(pos0, result0[1]);
									}
									if (result0 === null) {
										pos = pos0;
									}
								}
							}
						}
					}
				}
				return result0;
			}
			
			function parse_statement_block() {
				var result0, result1, result2, result3, result4, result5, result6, result7;
				var pos0, pos1;
				
				pos0 = pos;
				pos1 = pos;
				result0 = parse_empty_lines();
				if (result0 !== null) {
					result1 = parse_ws();
					if (result1 !== null) {
						if (input.charCodeAt(pos) === 123) {
							result2 = "{";
							pos++;
						} else {
							result2 = null;
							if (reportFailures === 0) {
								matchFailed("\"{\"");
							}
						}
						if (result2 !== null) {
							result3 = parse_empty_lines();
							if (result3 !== null) {
								result4 = parse_statements();
								if (result4 !== null) {
									result5 = parse_ws();
									if (result5 !== null) {
										if (input.charCodeAt(pos) === 125) {
											result6 = "}";
											pos++;
										} else {
											result6 = null;
											if (reportFailures === 0) {
												matchFailed("\"}\"");
											}
										}
										if (result6 !== null) {
											result0 = [result0, result1, result2, result3, result4, result5, result6];
										} else {
											result0 = null;
											pos = pos1;
										}
									} else {
										result0 = null;
										pos = pos1;
									}
								} else {
									result0 = null;
									pos = pos1;
								}
							} else {
								result0 = null;
								pos = pos1;
							}
						} else {
							result0 = null;
							pos = pos1;
						}
					} else {
						result0 = null;
						pos = pos1;
					}
				} else {
					result0 = null;
					pos = pos1;
				}
				if (result0 !== null) {
					result0 = (function(offset, s) { return s; })(pos0, result0[4]);
				}
				if (result0 === null) {
					pos = pos0;
				}
				if (result0 === null) {
					pos0 = pos;
					pos1 = pos;
					result0 = parse_empty_lines();
					if (result0 !== null) {
						result1 = parse_ws();
						if (result1 !== null) {
							if (input.charCodeAt(pos) === 123) {
								result2 = "{";
								pos++;
							} else {
								result2 = null;
								if (reportFailures === 0) {
									matchFailed("\"{\"");
								}
							}
							if (result2 !== null) {
								result3 = parse_empty_lines();
								if (result3 !== null) {
									result4 = parse_statements();
									if (result4 !== null) {
										result5 = parse_part_statement();
										if (result5 !== null) {
											result6 = parse_ws();
											if (result6 !== null) {
												if (input.charCodeAt(pos) === 125) {
													result7 = "}";
													pos++;
												} else {
													result7 = null;
													if (reportFailures === 0) {
														matchFailed("\"}\"");
													}
												}
												if (result7 !== null) {
													result0 = [result0, result1, result2, result3, result4, result5, result6, result7];
												} else {
													result0 = null;
													pos = pos1;
												}
											} else {
												result0 = null;
												pos = pos1;
											}
										} else {
											result0 = null;
											pos = pos1;
										}
									} else {
										result0 = null;
										pos = pos1;
									}
								} else {
									result0 = null;
									pos = pos1;
								}
							} else {
								result0 = null;
								pos = pos1;
							}
						} else {
							result0 = null;
							pos = pos1;
						}
					} else {
						result0 = null;
						pos = pos1;
					}
					if (result0 !== null) {
						result0 = (function(offset, s, p) { s.push( p ); return s; })(pos0, result0[4], result0[5]);
					}
					if (result0 === null) {
						pos = pos0;
					}
					if (result0 === null) {
						result0 = parse_statement();
					}
				}
				return result0;
			}
			
			function parse_expression() {
				var result0;
				
				result0 = parse_ternary();
				return result0;
			}
			
			function parse_ternary() {
				var result0, result1, result2, result3, result4, result5, result6, result7, result8;
				var pos0, pos1;
				
				pos0 = pos;
				pos1 = pos;
				result0 = parse_operation();
				if (result0 !== null) {
					result1 = parse_ws();
					if (result1 !== null) {
						if (input.charCodeAt(pos) === 63) {
							result2 = "?";
							pos++;
						} else {
							result2 = null;
							if (reportFailures === 0) {
								matchFailed("\"?\"");
							}
						}
						if (result2 !== null) {
							result3 = parse_ews();
							if (result3 !== null) {
								result4 = parse_ternary();
								if (result4 !== null) {
									result5 = parse_ews();
									if (result5 !== null) {
										if (input.charCodeAt(pos) === 58) {
											result6 = ":";
											pos++;
										} else {
											result6 = null;
											if (reportFailures === 0) {
												matchFailed("\":\"");
											}
										}
										if (result6 !== null) {
											result7 = parse_ews();
											if (result7 !== null) {
												result8 = parse_ternary();
												if (result8 !== null) {
													result0 = [result0, result1, result2, result3, result4, result5, result6, result7, result8];
												} else {
													result0 = null;
													pos = pos1;
												}
											} else {
												result0 = null;
												pos = pos1;
											}
										} else {
											result0 = null;
											pos = pos1;
										}
									} else {
										result0 = null;
										pos = pos1;
									}
								} else {
									result0 = null;
									pos = pos1;
								}
							} else {
								result0 = null;
								pos = pos1;
							}
						} else {
							result0 = null;
							pos = pos1;
						}
					} else {
						result0 = null;
						pos = pos1;
					}
				} else {
					result0 = null;
					pos = pos1;
				}
				if (result0 !== null) {
					result0 = (function(offset, e, left, right) { return { tag: "ternary", expression: e, left: left, right: right }; })(pos0, result0[0], result0[4], result0[8]);
				}
				if (result0 === null) {
					pos = pos0;
				}
				if (result0 === null) {
					result0 = parse_operation();
				}
				return result0;
			}
			
			function parse_operation() {
				var result0, result1, result2, result3, result4;
				var pos0, pos1;
				
				pos0 = pos;
				pos1 = pos;
				result0 = parse_primary();
				if (result0 !== null) {
					result1 = parse_ws();
					if (result1 !== null) {
						result2 = parse_operators();
						if (result2 !== null) {
							result3 = parse_ws();
							if (result3 !== null) {
								result4 = parse_operation();
								if (result4 !== null) {
									result0 = [result0, result1, result2, result3, result4];
								} else {
									result0 = null;
									pos = pos1;
								}
							} else {
								result0 = null;
								pos = pos1;
							}
						} else {
							result0 = null;
							pos = pos1;
						}
					} else {
						result0 = null;
						pos = pos1;
					}
				} else {
					result0 = null;
					pos = pos1;
				}
				if (result0 !== null) {
					result0 = (function(offset, left, op, right) { return { tag: op, left: left, right: right }; })(pos0, result0[0], result0[2], result0[4]);
				}
				if (result0 === null) {
					pos = pos0;
				}
				if (result0 === null) {
					result0 = parse_primary();
				}
				return result0;
			}
			
			function parse_primary() {
				var result0, result1, result2, result3;
				var pos0, pos1;
				
				result0 = parse_number();
				if (result0 === null) {
					result0 = parse_special();
					if (result0 === null) {
						result0 = parse_function();
						if (result0 === null) {
							pos0 = pos;
							pos1 = pos;
							if (input.charCodeAt(pos) === 40) {
								result0 = "(";
								pos++;
							} else {
								result0 = null;
								if (reportFailures === 0) {
									matchFailed("\"(\"");
								}
							}
							if (result0 !== null) {
								result1 = parse_expression();
								if (result1 !== null) {
									if (input.charCodeAt(pos) === 41) {
										result2 = ")";
										pos++;
									} else {
										result2 = null;
										if (reportFailures === 0) {
											matchFailed("\")\"");
										}
									}
									if (result2 !== null) {
										result3 = parse_argument_list();
										if (result3 !== null) {
											result0 = [result0, result1, result2, result3];
										} else {
											result0 = null;
											pos = pos1;
										}
									} else {
										result0 = null;
										pos = pos1;
									}
								} else {
									result0 = null;
									pos = pos1;
								}
							} else {
								result0 = null;
								pos = pos1;
							}
							if (result0 !== null) {
								result0 = (function(offset, e, args) { return { tag:"call", 'function':e, args:args }; })(pos0, result0[1], result0[3]);
							}
							if (result0 === null) {
								pos = pos0;
							}
							if (result0 === null) {
								pos0 = pos;
								pos1 = pos;
								result0 = parse_identifier();
								if (result0 !== null) {
									result1 = parse_argument_list();
									if (result1 !== null) {
										result0 = [result0, result1];
									} else {
										result0 = null;
										pos = pos1;
									}
								} else {
									result0 = null;
									pos = pos1;
								}
								if (result0 !== null) {
									result0 = (function(offset, i, args) { return { tag:"call", 'function':i, args:args }; })(pos0, result0[0], result0[1]);
								}
								if (result0 === null) {
									pos = pos0;
								}
								if (result0 === null) {
									pos0 = pos;
									pos1 = pos;
									if (input.charCodeAt(pos) === 40) {
										result0 = "(";
										pos++;
									} else {
										result0 = null;
										if (reportFailures === 0) {
											matchFailed("\"(\"");
										}
									}
									if (result0 !== null) {
										result1 = parse_expression();
										if (result1 !== null) {
											if (input.charCodeAt(pos) === 41) {
												result2 = ")";
												pos++;
											} else {
												result2 = null;
												if (reportFailures === 0) {
													matchFailed("\")\"");
												}
											}
											if (result2 !== null) {
												result0 = [result0, result1, result2];
											} else {
												result0 = null;
												pos = pos1;
											}
										} else {
											result0 = null;
											pos = pos1;
										}
									} else {
										result0 = null;
										pos = pos1;
									}
									if (result0 !== null) {
										result0 = (function(offset, expr) { return expr; })(pos0, result0[1]);
									}
									if (result0 === null) {
										pos = pos0;
									}
									if (result0 === null) {
										pos0 = pos;
										result0 = parse_identifier();
										if (result0 !== null) {
											result0 = (function(offset, i) { return { tag:"ident", name:i } })(pos0, result0);
										}
										if (result0 === null) {
											pos = pos0;
										}
									}
								}
							}
						}
					}
				}
				return result0;
			}
			
			function parse_argument_list() {
				var result0, result1, result2, result3, result4, result5;
				var pos0, pos1;
				
				pos0 = pos;
				pos1 = pos;
				if (input.charCodeAt(pos) === 40) {
					result0 = "(";
					pos++;
				} else {
					result0 = null;
					if (reportFailures === 0) {
						matchFailed("\"(\"");
					}
				}
				if (result0 !== null) {
					result1 = parse_ews();
					if (result1 !== null) {
						if (input.charCodeAt(pos) === 41) {
							result2 = ")";
							pos++;
						} else {
							result2 = null;
							if (reportFailures === 0) {
								matchFailed("\")\"");
							}
						}
						if (result2 !== null) {
							result0 = [result0, result1, result2];
						} else {
							result0 = null;
							pos = pos1;
						}
					} else {
						result0 = null;
						pos = pos1;
					}
				} else {
					result0 = null;
					pos = pos1;
				}
				if (result0 !== null) {
					result0 = (function(offset) { return []; })(pos0);
				}
				if (result0 === null) {
					pos = pos0;
				}
				if (result0 === null) {
					pos0 = pos;
					pos1 = pos;
					if (input.charCodeAt(pos) === 40) {
						result0 = "(";
						pos++;
					} else {
						result0 = null;
						if (reportFailures === 0) {
							matchFailed("\"(\"");
						}
					}
					if (result0 !== null) {
						result1 = parse_ews();
						if (result1 !== null) {
							result2 = parse_expression();
							if (result2 !== null) {
								result3 = [];
								result4 = parse_comma_expression();
								while (result4 !== null) {
									result3.push(result4);
									result4 = parse_comma_expression();
								}
								if (result3 !== null) {
									result4 = parse_ews();
									if (result4 !== null) {
										if (input.charCodeAt(pos) === 41) {
											result5 = ")";
											pos++;
										} else {
											result5 = null;
											if (reportFailures === 0) {
												matchFailed("\")\"");
											}
										}
										if (result5 !== null) {
											result0 = [result0, result1, result2, result3, result4, result5];
										} else {
											result0 = null;
											pos = pos1;
										}
									} else {
										result0 = null;
										pos = pos1;
									}
								} else {
									result0 = null;
									pos = pos1;
								}
							} else {
								result0 = null;
								pos = pos1;
							}
						} else {
							result0 = null;
							pos = pos1;
						}
					} else {
						result0 = null;
						pos = pos1;
					}
					if (result0 !== null) {
						result0 = (function(offset, first, rest) { return [ first ].concat( rest ); })(pos0, result0[2], result0[3]);
					}
					if (result0 === null) {
						pos = pos0;
					}
				}
				return result0;
			}
			
			function parse_comma_expression() {
				var result0, result1, result2, result3;
				var pos0, pos1;
				
				pos0 = pos;
				pos1 = pos;
				result0 = parse_ews();
				if (result0 !== null) {
					if (input.charCodeAt(pos) === 44) {
						result1 = ",";
						pos++;
					} else {
						result1 = null;
						if (reportFailures === 0) {
							matchFailed("\",\"");
						}
					}
					if (result1 !== null) {
						result2 = parse_ews();
						if (result2 !== null) {
							result3 = parse_expression();
							if (result3 !== null) {
								result0 = [result0, result1, result2, result3];
							} else {
								result0 = null;
								pos = pos1;
							}
						} else {
							result0 = null;
							pos = pos1;
						}
					} else {
						result0 = null;
						pos = pos1;
					}
				} else {
					result0 = null;
					pos = pos1;
				}
				if (result0 !== null) {
					result0 = (function(offset, expr) { return expr; })(pos0, result0[3]);
				}
				if (result0 === null) {
					pos = pos0;
				}
				return result0;
			}
			
			function parse_function() {
				var result0, result1, result2, result3;
				var pos0, pos1;
				
				pos0 = pos;
				pos1 = pos;
				result0 = parse_argument_list();
				if (result0 !== null) {
					result1 = parse_ws();
					if (result1 !== null) {
						if (input.substr(pos, 2) === "=>") {
							result2 = "=>";
							pos += 2;
						} else {
							result2 = null;
							if (reportFailures === 0) {
								matchFailed("\"=>\"");
							}
						}
						if (result2 !== null) {
							result3 = parse_statement_block();
							if (result3 !== null) {
								result0 = [result0, result1, result2, result3];
							} else {
								result0 = null;
								pos = pos1;
							}
						} else {
							result0 = null;
							pos = pos1;
						}
					} else {
						result0 = null;
						pos = pos1;
					}
				} else {
					result0 = null;
					pos = pos1;
				}
				if (result0 !== null) {
					result0 = (function(offset, args, body) { return { tag: "function", body: body, args: args }; })(pos0, result0[0], result0[3]);
				}
				if (result0 === null) {
					pos = pos0;
				}
				return result0;
			}
			
			function parse_ws()
			{
				var start_pos = pos;

				while( /^[ \t]/.test( input.charAt( pos ) ) )
				{
					pos++;
				}

				if( pos === start_pos && reportFailures === 0 )
				{
					matchFailed("[ \\t]");
				}

				return [];
			}
			
			function parse_ews()
			{
				var start_pos = pos;

				while( /^[ \t\n]/.test( input.charAt( pos ) ) )
				{
					pos++;
				}

				if( pos === start_pos && reportFailures === 0 )
				{
					matchFailed("[ \\t\\n]");
				}
